--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.1.5",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
